configuration and codegen

--- a/client/package.json
+++ b/client/package.json
@@ -5,26 +5,50 @@
     "start": "vite",
     "start:staging": "env-cmd -f .env.staging vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ./src --ext .jsx,.js,.ts,.tsx,.json,.scss,.md,.graphql --ignore-path ./.gitignore",
+    "lint:fix": "yarn run lint --fix",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen:staging": "graphql-codegen --config codegen-staging.yml"
   },
   "dependencies": {
-    "@apollo/client": "3.5.7",
+    "@apollo/client": "^3.4.16",
+    "apollo-server": "^3.6.2",
     "dayjs": "^1.10.7",
-    "fp-ts": "^2.11.8",
-    "graphql": "^16.2.0",
+    "fp-ts": "^2.11.5",
+    "graphql": "^15.6.0",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@graphql-codegen/cli": "1.21.3",
+    "@graphql-codegen/typescript": "1.21.1",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-react-apollo": "2.2.3",
+    "@types/eslint": "^8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "@vitejs/plugin-react": "^1.0.0",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
     "vite-plugin-checker": "^0.3.4",
     "vite-plugin-svgr": "^1.0.1",
     "vite-react-jsx": "^1.1.2",
     "vite-tsconfig-paths": "^3.3.17"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
   }
 }
