--- a/client/codegen.staging.yml
+++ b/client/codegen.staging.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'http://localhost:4000/api'
+schema: 'https://foodandthought.herokuapp.com/api'
 documents: 'src/**/*.graphql'
 generates:
   src/graphql/client/graphql-frontend.ts:
