--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-token-refresh": "^0.3.3",
     "apollo-server": "^3.6.2",
     "dayjs": "^1.10.7",
     "fp-ts": "^2.11.5",
     "graphql": "^15.6.0",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
